进行过更改

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div id="app">
-			<h2 class="text-center title">待办事项</h2>
+			<h2 class="text-center title">待办事项（进行过更改）</h2>
 			<p class="one clearfix">
 				<input type="text" v-model="textVal" placeholder="接下来要做什么..." v-on:keyup.enter="addFun"/>
 				<button type="button" class="an" @click="addFun">添加</button>
